leptos_macro/tests/view/05_concrete_prop_missing.stderr
error[E0277]: missing required prop `concrete_bool` on component `Inner`
  --> tests/view/05_concrete_prop_missing.rs:11:14
   |
11 |             <Inner/>
   |              ^^^^^ missing prop `concrete_bool`
   |
   = help: the trait `__required_Inner_concrete_bool` is not implemented for `leptos::prelude::__Absent`
   = note: required props: [`concrete_bool`]
note: required by a bound in `Inner::__PresenceBuilder::<(__F0,)>::__require_props`
  --> tests/view/05_concrete_prop_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^ required by this bound in `__PresenceBuilder::<(__F0,)>::__require_props`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__check_missing` exists for struct `Inner::__PresenceBuilder<(leptos::prelude::__Absent,)>`, but its trait bounds were not satisfied
  --> tests/view/05_concrete_prop_missing.rs:11:14
   |
11 |             <Inner/>
   |              ^^^^^
...
16 | #[component]
   | ------------ method `__check_missing` not found for this struct
   |
  ::: $WORKSPACE/leptos/src/component.rs
   |
   | pub struct __Absent;
   | ------------------- doesn't satisfy `_: __required_Inner_concrete_bool`
   |
note: trait bound `leptos::prelude::__Absent: __required_Inner_concrete_bool` was not satisfied
  --> tests/view/05_concrete_prop_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
